Corrected "serie" to "series" because "serie" isn't a word and apparently this is the hill I want to die on