@@ -84,14 +84,14 @@ public class LeagueServiceTest extends AbstractServerTest {
         );
         leagues.add(league);
 
-        LeagueSeriesData leagueSerie = league.getLeagueData(_cardLibrary, _formatLibrary, null).getSeries().getFirst();
+        LeagueSeriesData seriesData = league.getLeagueData(_cardLibrary, _formatLibrary, null).getSeries().getFirst();
 
         Mockito.when(leagueDao.loadActiveLeagues(Mockito.anyInt())).thenReturn(leagues);
 
         LeagueMatchDAO leagueMatchDAO = Mockito.mock(LeagueMatchDAO.class);
 
         Set<LeagueMatchResult> matches = new HashSet<>();
-        matches.add(new LeagueMatchResult(leagueSerie.getName(), "player1", "player2"));
+        matches.add(new LeagueMatchResult(seriesData.getName(), "player1", "player2"));
 
         Mockito.when(leagueMatchDAO.getLeagueMatches(league.getType())).thenReturn(new HashSet<>(matches));
 
@@ -100,20 +100,20 @@ public class LeagueServiceTest extends AbstractServerTest {
 
         LeagueService leagueService = new LeagueService(leagueDao, leagueMatchDAO, leagueParticipationDAO, collectionsManager, _cardLibrary, _formatLibrary, null);
 
-        assertTrue(leagueService.canPlayRankedGame(league, leagueSerie, "player1"));
-        assertFalse(leagueService.canPlayRankedGameAgainst(league, leagueSerie, "player1", "player2"));
-        assertTrue(leagueService.canPlayRankedGameAgainst(league, leagueSerie, "player1", "player3"));
+        assertTrue(leagueService.canPlayRankedGame(league, seriesData, "player1"));
+        assertFalse(leagueService.canPlayRankedGameAgainst(league, seriesData, "player1", "player2"));
+        assertTrue(leagueService.canPlayRankedGameAgainst(league, seriesData, "player1", "player3"));
 
-        leagueService.reportLeagueGameResult(league, leagueSerie, "player1", "player3");
+        leagueService.reportLeagueGameResult(league, seriesData, "player1", "player3");
 
         Mockito.verify(leagueMatchDAO).getLeagueMatches(league.getType());
 
-        Mockito.verify(leagueMatchDAO).addPlayedMatch(league.getType(), leagueSerie.getName(), "player1", "player3");
+        Mockito.verify(leagueMatchDAO).addPlayedMatch(league.getType(), seriesData.getName(), "player1", "player3");
         Mockito.verifyNoMoreInteractions(leagueMatchDAO);
 
-        assertFalse(leagueService.canPlayRankedGame(league, leagueSerie, "player1"));
-        assertFalse(leagueService.canPlayRankedGameAgainst(league, leagueSerie, "player1", "player2"));
-        assertFalse(leagueService.canPlayRankedGameAgainst(league, leagueSerie, "player1", "player3"));
+        assertFalse(leagueService.canPlayRankedGame(league, seriesData, "player1"));
+        assertFalse(leagueService.canPlayRankedGameAgainst(league, seriesData, "player1", "player2"));
+        assertFalse(leagueService.canPlayRankedGameAgainst(league, seriesData, "player1", "player3"));
     }
 
     @Test
@@ -126,7 +126,7 @@ public class LeagueServiceTest extends AbstractServerTest {
         League league = new League(5000, "League name", "leagueType", NewConstructedLeagueData.class.getName(), sb, 0);
         leagues.add(league);
 
-        LeagueSeriesData leagueSerie = league.getLeagueData(_cardLibrary, _formatLibrary,null).getSeries().getFirst();
+        LeagueSeriesData seriesData = league.getLeagueData(_cardLibrary, _formatLibrary,null).getSeries().getFirst();
 
         Mockito.when(leagueDao.loadActiveLeagues(Mockito.anyInt())).thenReturn(leagues);
 
@@ -144,24 +144,24 @@ public class LeagueServiceTest extends AbstractServerTest {
 
         LeagueService leagueService = new LeagueService(leagueDao, leagueMatchDAO, leagueParticipationDAO, collectionsManager, _cardLibrary, _formatLibrary, null);
 
-        leagueService.reportLeagueGameResult(league, leagueSerie, "player1", "player2");
-        leagueService.reportLeagueGameResult(league, leagueSerie, "player1", "player3");
-        leagueService.reportLeagueGameResult(league, leagueSerie, "player2", "player3");
+        leagueService.reportLeagueGameResult(league, seriesData, "player1", "player2");
+        leagueService.reportLeagueGameResult(league, seriesData, "player1", "player3");
+        leagueService.reportLeagueGameResult(league, seriesData, "player2", "player3");
 
-        final List<PlayerStanding> leagueSerieStandings = leagueService.getLeagueSerieStandings(league, leagueSerie);
-        assertEquals(3, leagueSerieStandings.size());
-        assertEquals("player1", leagueSerieStandings.getFirst().getPlayerName());
-        assertEquals(4, leagueSerieStandings.getFirst().getPoints());
-        assertEquals(2, leagueSerieStandings.get(0).getGamesPlayed());
-        assertEquals(1, leagueSerieStandings.get(0).getStanding());
-        assertEquals("player2", leagueSerieStandings.get(1).getPlayerName());
-        assertEquals(3, leagueSerieStandings.get(1).getPoints());
-        assertEquals(2, leagueSerieStandings.get(1).getGamesPlayed());
-        assertEquals(2, leagueSerieStandings.get(1).getStanding());
-        assertEquals("player3", leagueSerieStandings.get(2).getPlayerName());
-        assertEquals(2, leagueSerieStandings.get(2).getPoints());
-        assertEquals(2, leagueSerieStandings.get(2).getGamesPlayed());
-        assertEquals(3, leagueSerieStandings.get(2).getStanding());
+        final List<PlayerStanding> seriesStandings = leagueService.getLeagueSeriesStandings(league, seriesData);
+        assertEquals(3, seriesStandings.size());
+        assertEquals("player1", seriesStandings.getFirst().getPlayerName());
+        assertEquals(4, seriesStandings.getFirst().getPoints());
+        assertEquals(2, seriesStandings.get(0).getGamesPlayed());
+        assertEquals(1, seriesStandings.get(0).getStanding());
+        assertEquals("player2", seriesStandings.get(1).getPlayerName());
+        assertEquals(3, seriesStandings.get(1).getPoints());
+        assertEquals(2, seriesStandings.get(1).getGamesPlayed());
+        assertEquals(2, seriesStandings.get(1).getStanding());
+        assertEquals("player3", seriesStandings.get(2).getPlayerName());
+        assertEquals(2, seriesStandings.get(2).getPoints());
+        assertEquals(2, seriesStandings.get(2).getGamesPlayed());
+        assertEquals(3, seriesStandings.get(2).getStanding());
 
         final List<PlayerStanding> leagueStandings = leagueService.getLeagueStandings(league);
         assertEquals(3, leagueStandings.size());
